# slow-api

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
scripts/: clean  lint  setup  tests
src/slow_api/: SlowAPI.py  __init__.py  application.py  enums.py  exceptions.py  slow_api.py
test/: test_slow_api.py
tests/: test_add_routes_get.py  test_decorators.py  test_methods.py  test_public.py
